--- a/scss/patterns/_buttons.scss
+++ b/scss/patterns/_buttons.scss
@@ -51,3 +51,27 @@ button {
 		margin: 0 auto;
 	}
 }
+
+// Video play button
+@mixin video-play() {
+	position: relative;
+
+	background: rgba(0, 0, 0, 0.5);
+
+	border-radius: 50%;
+
+	&:before {
+		position: absolute;
+
+		display: block;
+		content: '';
+
+		width: 100%;
+		height: 100%;
+
+		@extend %icon-play-arrow;
+
+		background-size: 20%;
+		background-position: 55%;
+	}
+}
